Computed Cohens kappa

--- a/training_pipeline_testing.ipynb
+++ b/training_pipeline_testing.ipynb
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "4a37f636",
    "metadata": {},
    "outputs": [
@@ -379,6 +379,231 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>772160</th>\n",
+       "      <td>772160</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>315</td>\n",
+       "      <td>Pia Kjærsgaard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Der er ikke stillet ændringsforslag.  Er der n...</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772161</th>\n",
+       "      <td>772161</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>316</td>\n",
+       "      <td>Pia Kjærsgaard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Der stemmes om forslagets endelige vedtagelse,...</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772162</th>\n",
+       "      <td>772162</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>317</td>\n",
+       "      <td>Pia Kjærsgaard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Der er ikke stillet ændringsforslag.  Er der n...</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772163</th>\n",
+       "      <td>772163</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>318</td>\n",
+       "      <td>Pia Kjærsgaard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>41</td>\n",
+       "      <td>Der stemmes om forslagets endelige vedtagelse,...</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772164</th>\n",
+       "      <td>772164</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>319</td>\n",
+       "      <td>Pia Kjærsgaard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Hr. Holger K. Nielsen, værsgo.    (Ordfører)</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772165</th>\n",
+       "      <td>772165</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>320</td>\n",
+       "      <td>Holger K. Nielsen</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>329.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>268</td>\n",
+       "      <td>Om lidt vil der være et flertal, som stemmer d...</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772166</th>\n",
+       "      <td>772166</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>321</td>\n",
+       "      <td>Pia Kjærsgaard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Tak. Er der flere, der ønsker ordet?  Det er d...</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772167</th>\n",
+       "      <td>772167</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>322</td>\n",
+       "      <td>Pia Kjærsgaard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>37</td>\n",
+       "      <td>Der stemmes om forslagets endelige vedtagelse....</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772168</th>\n",
+       "      <td>772168</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>323</td>\n",
+       "      <td>Pia Kjærsgaard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Der er ikke stillet ændringsforslag.  Værsgo t...</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772169</th>\n",
+       "      <td>772169</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>324</td>\n",
+       "      <td>Andreas Steenberg</td>\n",
+       "      <td>RV</td>\n",
+       "      <td>1507.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>325</td>\n",
+       "      <td>Siden 2016 er 62 børn blev udvist, selv om en ...</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772170</th>\n",
+       "      <td>772170</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>325</td>\n",
+       "      <td>Pia Kjærsgaard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Tak for det. Der er ikke nogen, der ønsker at ...</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772171</th>\n",
+       "      <td>772171</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>326</td>\n",
+       "      <td>Pia Kjærsgaard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>37</td>\n",
+       "      <td>Der stemmes om forslagets endelige vedtagelse....</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772172</th>\n",
+       "      <td>772172</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>327</td>\n",
+       "      <td>Pia Kjærsgaard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Forhandlingen drejer sig i første omgang om de...</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772173</th>\n",
+       "      <td>772173</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>328</td>\n",
+       "      <td>Pia Kjærsgaard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Ønskes afstemning om ændringsforslag nr. 1 af ...</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772174</th>\n",
+       "      <td>772174</td>\n",
+       "      <td>2018-12-20</td>\n",
+       "      <td>2. (sidste) behandling af beslutningsforslag ...</td>\n",
+       "      <td>329</td>\n",
+       "      <td>Pia Kjærsgaard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Forhandlingen drejer sig derefter om forslaget...</td>\n",
+       "      <td>DK-Folketing</td>\n",
+       "      <td>DNK</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>772175</th>\n",
        "      <td>772175</td>\n",
@@ -460,6 +685,21 @@
       ],
       "text/plain": [
        "        Unnamed: 0        date  \\\n",
+       "772160      772160  2018-12-20   \n",
+       "772161      772161  2018-12-20   \n",
+       "772162      772162  2018-12-20   \n",
+       "772163      772163  2018-12-20   \n",
+       "772164      772164  2018-12-20   \n",
+       "772165      772165  2018-12-20   \n",
+       "772166      772166  2018-12-20   \n",
+       "772167      772167  2018-12-20   \n",
+       "772168      772168  2018-12-20   \n",
+       "772169      772169  2018-12-20   \n",
+       "772170      772170  2018-12-20   \n",
+       "772171      772171  2018-12-20   \n",
+       "772172      772172  2018-12-20   \n",
+       "772173      772173  2018-12-20   \n",
+       "772174      772174  2018-12-20   \n",
        "772175      772175  2018-12-20   \n",
        "772176      772176  2018-12-20   \n",
        "772177      772177  2018-12-20   \n",
@@ -467,20 +707,65 @@
        "772179      772179  2018-12-20   \n",
        "\n",
        "                                                   agenda  speechnumber  \\\n",
+       "772160   2. (sidste) behandling af beslutningsforslag ...           315   \n",
+       "772161   2. (sidste) behandling af beslutningsforslag ...           316   \n",
+       "772162   2. (sidste) behandling af beslutningsforslag ...           317   \n",
+       "772163   2. (sidste) behandling af beslutningsforslag ...           318   \n",
+       "772164   2. (sidste) behandling af beslutningsforslag ...           319   \n",
+       "772165   2. (sidste) behandling af beslutningsforslag ...           320   \n",
+       "772166   2. (sidste) behandling af beslutningsforslag ...           321   \n",
+       "772167   2. (sidste) behandling af beslutningsforslag ...           322   \n",
+       "772168   2. (sidste) behandling af beslutningsforslag ...           323   \n",
+       "772169   2. (sidste) behandling af beslutningsforslag ...           324   \n",
+       "772170   2. (sidste) behandling af beslutningsforslag ...           325   \n",
+       "772171   2. (sidste) behandling af beslutningsforslag ...           326   \n",
+       "772172   2. (sidste) behandling af beslutningsforslag ...           327   \n",
+       "772173   2. (sidste) behandling af beslutningsforslag ...           328   \n",
+       "772174   2. (sidste) behandling af beslutningsforslag ...           329   \n",
        "772175   2. (sidste) behandling af beslutningsforslag ...           330   \n",
        "772176   2. (sidste) behandling af beslutningsforslag ...           331   \n",
        "772177   2. (sidste) behandling af beslutningsforslag ...           332   \n",
        "772178   2. (sidste) behandling af beslutningsforslag ...           333   \n",
        "772179   2. (sidste) behandling af beslutningsforslag ...           334   \n",
        "\n",
-       "               speaker party  party.facts.id  chair  terms  \\\n",
-       "772175  Pia Kjærsgaard   NaN             NaN   True     28   \n",
-       "772176  Pia Kjærsgaard   NaN             NaN   True     22   \n",
-       "772177  Pia Kjærsgaard   NaN             NaN   True     37   \n",
-       "772178  Pia Kjærsgaard   NaN             NaN   True     61   \n",
-       "772179  Pia Kjærsgaard   NaN             NaN   True    270   \n",
+       "                  speaker party  party.facts.id  chair  terms  \\\n",
+       "772160     Pia Kjærsgaard   NaN             NaN   True     22   \n",
+       "772161     Pia Kjærsgaard   NaN             NaN   True     64   \n",
+       "772162     Pia Kjærsgaard   NaN             NaN   True     22   \n",
+       "772163     Pia Kjærsgaard   NaN             NaN   True     41   \n",
+       "772164     Pia Kjærsgaard   NaN             NaN   True      6   \n",
+       "772165  Holger K. Nielsen    SF           329.0  False    268   \n",
+       "772166     Pia Kjærsgaard   NaN             NaN   True     16   \n",
+       "772167     Pia Kjærsgaard   NaN             NaN   True     37   \n",
+       "772168     Pia Kjærsgaard   NaN             NaN   True     11   \n",
+       "772169  Andreas Steenberg    RV          1507.0  False    325   \n",
+       "772170     Pia Kjærsgaard   NaN             NaN   True     17   \n",
+       "772171     Pia Kjærsgaard   NaN             NaN   True     37   \n",
+       "772172     Pia Kjærsgaard   NaN             NaN   True     33   \n",
+       "772173     Pia Kjærsgaard   NaN             NaN   True     11   \n",
+       "772174     Pia Kjærsgaard   NaN             NaN   True     27   \n",
+       "772175     Pia Kjærsgaard   NaN             NaN   True     28   \n",
+       "772176     Pia Kjærsgaard   NaN             NaN   True     22   \n",
+       "772177     Pia Kjærsgaard   NaN             NaN   True     37   \n",
+       "772178     Pia Kjærsgaard   NaN             NaN   True     61   \n",
+       "772179     Pia Kjærsgaard   NaN             NaN   True    270   \n",
        "\n",
        "                                                     text    parliament  \\\n",
+       "772160  Der er ikke stillet ændringsforslag.  Er der n...  DK-Folketing   \n",
+       "772161  Der stemmes om forslagets endelige vedtagelse,...  DK-Folketing   \n",
+       "772162  Der er ikke stillet ændringsforslag.  Er der n...  DK-Folketing   \n",
+       "772163  Der stemmes om forslagets endelige vedtagelse,...  DK-Folketing   \n",
+       "772164       Hr. Holger K. Nielsen, værsgo.    (Ordfører)  DK-Folketing   \n",
+       "772165  Om lidt vil der være et flertal, som stemmer d...  DK-Folketing   \n",
+       "772166  Tak. Er der flere, der ønsker ordet?  Det er d...  DK-Folketing   \n",
+       "772167  Der stemmes om forslagets endelige vedtagelse....  DK-Folketing   \n",
+       "772168  Der er ikke stillet ændringsforslag.  Værsgo t...  DK-Folketing   \n",
+       "772169  Siden 2016 er 62 børn blev udvist, selv om en ...  DK-Folketing   \n",
+       "772170  Tak for det. Der er ikke nogen, der ønsker at ...  DK-Folketing   \n",
+       "772171  Der stemmes om forslagets endelige vedtagelse....  DK-Folketing   \n",
+       "772172  Forhandlingen drejer sig i første omgang om de...  DK-Folketing   \n",
+       "772173  Ønskes afstemning om ændringsforslag nr. 1 af ...  DK-Folketing   \n",
+       "772174  Forhandlingen drejer sig derefter om forslaget...  DK-Folketing   \n",
        "772175  Der stemmes om forslagets endelige vedtagelse....  DK-Folketing   \n",
        "772176  Der er ikke stillet ændringsforslag.  Er der n...  DK-Folketing   \n",
        "772177  Der stemmes om forslagets endelige vedtagelse....  DK-Folketing   \n",
@@ -488,6 +773,21 @@
        "772179  Det bliver jo ikke et gensyn med folketingssek...  DK-Folketing   \n",
        "\n",
        "       iso3country  \n",
+       "772160         DNK  \n",
+       "772161         DNK  \n",
+       "772162         DNK  \n",
+       "772163         DNK  \n",
+       "772164         DNK  \n",
+       "772165         DNK  \n",
+       "772166         DNK  \n",
+       "772167         DNK  \n",
+       "772168         DNK  \n",
+       "772169         DNK  \n",
+       "772170         DNK  \n",
+       "772171         DNK  \n",
+       "772172         DNK  \n",
+       "772173         DNK  \n",
+       "772174         DNK  \n",
        "772175         DNK  \n",
        "772176         DNK  \n",
        "772177         DNK  \n",
@@ -495,13 +795,13 @@
        "772179         DNK  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataframe[772175:]"
+    "dataframe[772160:]"
    ]
   },
   {
