--- a/analysis_gold_labeling.ipynb
+++ b/analysis_gold_labeling.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0ddde3a6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import stuff\n",
     "\n",
-    "import json"
+    "import json\n"
    ]
   },
   {
@@ -105,7 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "id": "11485530",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file_rune = \"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/json_files/v3_cleaned_labelled_rune.json\"\n",
+    "output_file_markus = \"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/json_files/v3_cleaned_labelled_markus.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "122c5ad8",
    "metadata": {},
    "outputs": [],
@@ -143,7 +154,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
+   "id": "5741cb64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import cohen_kappa_score\n",
+    "import pandas as pd\n",
+    "\n",
+    "# extract choices by matching paragraph+sentence_nr\n",
+    "df_m = pd.DataFrame(markus_data)[['paragraph','sentence_nr','choices']]\n",
+    "df_r = pd.DataFrame(rune_data)[['paragraph','sentence_nr','choices']]\n",
+    "\n",
+    "# merge\n",
+    "df = df_m.merge(df_r, on=['paragraph','sentence_nr'], suffixes=('_m','_r'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f714ea0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6988383765954396"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kappa = cohen_kappa_score(df['choices_m'], df['choices_r'])\n",
+    "kappa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "67863ba2",
    "metadata": {},
    "outputs": [],
@@ -179,7 +230,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
+   "id": "bafc2b06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "258"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(inter_annotater_agreement)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "0551e213",
    "metadata": {},
    "outputs": [
@@ -541,7 +613,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "blame_bert",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -555,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
